multiple items can be bought at once
